--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="/Logo/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>S I G</title>
+    <title>GESSAT </title>
   </head>
   <body>
     <div id="root"></div>
